// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders hidden toggle correctly 1`] = `
<div
  className=
      ms-Toggle
      is-enabled
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 8px;
      }
  hidden={true}
>
  <div
    className=
        ms-Toggle-innerContainer
        {
          display: flex;
          position: relative;
        }
  >
    <button
      aria-checked={false}
      className=
          ms-Toggle-background
          {
            align-items: center;
            background: #ffffff;
            border-radius: 10px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            cursor: pointer;
            display: flex;
            font-size: 20px;
            height: 20px;
            outline: transparent;
            overflow: visible;
            padding-bottom: 0;
            padding-left: 3px;
            padding-right: 3px;
            padding-top: 0;
            position: relative;
            transition: all 0.1s ease;
            width: 40px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: -2px;
            content: "";
            left: -2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: -2px;
            top: -2px;
            z-index: 1;
          }
          &:hover {
            border-color: #323130;
          }
          &:hover .ms-Toggle-thumb {
            background-color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Toggle-thumb {
            border-color: Highlight;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
          }
      data-is-focusable={true}
      data-ktp-target={true}
      hidden={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className=
            ms-Toggle-thumb
            {
              background-color: #605e5c;
              border-color: transparent;
              border-radius: 50%;
              border-style: solid;
              border-width: 6px;
              box-sizing: border-box;
              display: block;
              height: 12px;
              transition: all 0.1s ease;
              width: 12px;
            }
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly 1`] = `
<div
  className=
      ms-Toggle
      is-enabled
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 8px;
      }
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className=
        ms-Toggle-innerContainer
        {
          display: flex;
          position: relative;
        }
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className=
          ms-Toggle-background
          {
            align-items: center;
            background: #ffffff;
            border-radius: 10px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            cursor: pointer;
            display: flex;
            font-size: 20px;
            height: 20px;
            outline: transparent;
            overflow: visible;
            padding-bottom: 0;
            padding-left: 3px;
            padding-right: 3px;
            padding-top: 0;
            position: relative;
            transition: all 0.1s ease;
            width: 40px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: -2px;
            content: "";
            left: -2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: -2px;
            top: -2px;
            z-index: 1;
          }
          &:hover {
            border-color: #323130;
          }
          &:hover .ms-Toggle-thumb {
            background-color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Toggle-thumb {
            border-color: Highlight;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
          }
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className=
            ms-Toggle-thumb
            {
              background-color: #605e5c;
              border-color: transparent;
              border-radius: 50%;
              border-style: solid;
              border-width: 6px;
              box-sizing: border-box;
              display: block;
              height: 12px;
              transition: all 0.1s ease;
              width: 12px;
            }
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label (JSX Element) 1`] = `
<div
  className=
      ms-Toggle
      is-enabled
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 8px;
      }
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 16px;
          margin-right: 0px;
          margin-top: 0px;
          order: 1;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-break: break-word;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    <p>
      Label
    </p>
  </label>
  <div
    className=
        ms-Toggle-innerContainer
        {
          display: flex;
          position: relative;
        }
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className=
          ms-Toggle-background
          {
            align-items: center;
            background: #ffffff;
            border-radius: 10px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            cursor: pointer;
            display: flex;
            font-size: 20px;
            height: 20px;
            outline: transparent;
            overflow: visible;
            padding-bottom: 0;
            padding-left: 3px;
            padding-right: 3px;
            padding-top: 0;
            position: relative;
            transition: all 0.1s ease;
            width: 40px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: -2px;
            content: "";
            left: -2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: -2px;
            top: -2px;
            z-index: 1;
          }
          &:hover {
            border-color: #323130;
          }
          &:hover .ms-Toggle-thumb {
            background-color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Toggle-thumb {
            border-color: Highlight;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
          }
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className=
            ms-Toggle-thumb
            {
              background-color: #605e5c;
              border-color: transparent;
              border-radius: 50%;
              border-style: solid;
              border-width: 6px;
              box-sizing: border-box;
              display: block;
              height: 12px;
              transition: all 0.1s ease;
              width: 12px;
            }
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label (string) 1`] = `
<div
  className=
      ms-Toggle
      is-enabled
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 8px;
      }
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 16px;
          margin-right: 0px;
          margin-top: 0px;
          order: 1;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-break: break-word;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className=
        ms-Toggle-innerContainer
        {
          display: flex;
          position: relative;
        }
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className=
          ms-Toggle-background
          {
            align-items: center;
            background: #ffffff;
            border-radius: 10px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            cursor: pointer;
            display: flex;
            font-size: 20px;
            height: 20px;
            outline: transparent;
            overflow: visible;
            padding-bottom: 0;
            padding-left: 3px;
            padding-right: 3px;
            padding-top: 0;
            position: relative;
            transition: all 0.1s ease;
            width: 40px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: -2px;
            content: "";
            left: -2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: -2px;
            top: -2px;
            z-index: 1;
          }
          &:hover {
            border-color: #323130;
          }
          &:hover .ms-Toggle-thumb {
            background-color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Toggle-thumb {
            border-color: Highlight;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
          }
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className=
            ms-Toggle-thumb
            {
              background-color: #605e5c;
              border-color: transparent;
              border-radius: 50%;
              border-style: solid;
              border-width: 6px;
              box-sizing: border-box;
              display: block;
              height: 12px;
              transition: all 0.1s ease;
              width: 12px;
            }
      />
    </button>
  </div>
</div>
`;

exports[`Toggle renders toggle correctly with inline label and on/off text provided 1`] = `
<div
  className=
      ms-Toggle
      is-enabled
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        display: flex;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 8px;
      }
>
  <label
    className=
        ms-Label
        ms-Toggle-label
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          display: inline-block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 600;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 16px;
          margin-top: 0px;
          overflow-wrap: break-word;
          padding-bottom: 5px;
          padding-left: 0;
          padding-right: 0;
          padding-top: 5px;
          word-break: break-word;
          word-wrap: break-word;
        }
    htmlFor="Toggle0"
    id="Toggle0-label"
  >
    Label
  </label>
  <div
    className=
        ms-Toggle-innerContainer
        {
          display: flex;
          position: relative;
        }
  >
    <button
      aria-checked={false}
      aria-labelledby="Toggle0-label"
      className=
          ms-Toggle-background
          {
            align-items: center;
            background: #ffffff;
            border-radius: 10px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            cursor: pointer;
            display: flex;
            font-size: 20px;
            height: 20px;
            outline: transparent;
            overflow: visible;
            padding-bottom: 0;
            padding-left: 3px;
            padding-right: 3px;
            padding-top: 0;
            position: relative;
            transition: all 0.1s ease;
            width: 40px;
          }
          &::-moz-focus-inner {
            border: 0;
          }
          .ms-Fabric--isFocusVisible &:focus:after {
            border: 1px solid #ffffff;
            bottom: -2px;
            content: "";
            left: -2px;
            outline: 1px solid #605e5c;
            position: absolute;
            right: -2px;
            top: -2px;
            z-index: 1;
          }
          &:hover {
            border-color: #323130;
          }
          &:hover .ms-Toggle-thumb {
            background-color: #201f1e;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Toggle-thumb {
            border-color: Highlight;
          }
          @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
            border-color: Highlight;
          }
      data-is-focusable={true}
      data-ktp-target={true}
      id="Toggle0"
      onClick={[Function]}
      role="switch"
      type="button"
    >
      <span
        className=
            ms-Toggle-thumb
            {
              background-color: #605e5c;
              border-color: transparent;
              border-radius: 50%;
              border-style: solid;
              border-width: 6px;
              box-sizing: border-box;
              display: block;
              height: 12px;
              transition: all 0.1s ease;
              width: 12px;
            }
      />
    </button>
    <label
      className=
          ms-Label
          ms-Toggle-stateText
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
          && {
            font-weight: 400;
            margin-bottom: 0;
            margin-left: 8px;
            margin-right: 8px;
            margin-top: 0;
            padding-bottom: 0;
            padding-left: 0;
            padding-right: 0;
            padding-top: 0;
            user-select: none;
          }
      htmlFor="Toggle0"
      id="Toggle0-stateText"
    >
      Off
    </label>
  </div>
</div>
`;
